Adding local ressources

--- a/p_viticola/outline.tex
+++ b/p_viticola/outline.tex
@@ -28,10 +28,11 @@
 \title{Simultaneous phenotyping (ML approach) of sporulation and necrosis traits in the vitis spp-downy mildew interaction}
 \date{22nd July 2023}
 \author{
+Marie-Annick Dorne, (Image acquisitions)\\
 Marie-Celine Lacombe, (Pathogen, annotations review, data management)\\
 Felicià Maviane, (project lead, article writing, DL and annotation)\\
 Nemo Peeters (project management, article writing, pathogen),\\
-Tyronne Possamai, ? (comparing human/machine annotations, OIV annotations)\\
+Tyronne Possamai, (comparing human/machine annotations, OIV annotations)\\
 David Rousseau (project management, article writing, DL)\\
 Sabine Wiedemann-Merdinoglu (Project management, Article writing, Pathogen, vitis, image acquisition\\
 }
@@ -74,6 +75,15 @@ Sabine Wiedemann-Merdinoglu (Project management, Article writing, Pathogen, viti
             	\item Merdinoglu et al., 2018, Hogbregat et al., 2019, (A trouver dans Possamai et wiedemann\_merdinoglu, 2022)
             	\item Velasquez-Camacho et al., 2023
             \end{itemize}
+            \textbf{David}
+            \begin{itemize}
+                \item Mat et Meth doit être neutre
+                \item Zooniverse est une phrase
+                \item après détailler les expériences
+                \item détaillerles métriques dans mat et met
+                \item les métriques uniquement dans résults
+                \item regarder papiers équipe ImHorPhen dans plant methods
+            \end{itemize}
 
 	\end{abstract}
 \end{changemargin}
@@ -86,6 +96,20 @@ Sabine Wiedemann-Merdinoglu (Project management, Article writing, Pathogen, viti
 \tableofcontents
 
 \section{Introduction}
+
+% Phenotypage imagerie important et de grands succès ref livre ou review.
+% notamment en imagerie des maladies : review
+% une limite est le phénotypage de symptômes/stress unique alors que dans la nature ou en conditions contrôlées souvent multiple
+% On propose une approche en CNN avec un stress double pour la première fois.
+
+% On l'applique à Vitis qui est une plante d'intérêt agronomique et économie.
+% Most related work: visiion pour maladie sur vitis (liste).
+% Toi tu proposes 2 symptomes traités jusqu'ici séparément dans la litérature
+% Proposé avec une approche SOTA de type CNN et robots d'imagerie automatisés.
+
+% On montre la finesse de la méthode sur des expériences historique avec QTL, on étudie les erreurs résiduels, on discute les échelles actuellement en cours, ... montrer que c'est discuté en détail.
+
+
 
 - importance of disease world wide on vitis (ref)
 - downy mildew (plasmopara viticola), details and ref, diversity ? means of controlling the disease on vitis.
@@ -565,6 +589,7 @@ Global DM phenotype on Vitis as factor of 4 discrete traits
 \subsection{Binary prediction as a heuristic for scale prediction}
 
 \subsection{Result from experiment re-analysis}
+
 
 \section{Discussion}
 
