Added resources for figures

--- a/articles.bib
+++ b/articles.bib
@@ -3323,6 +3323,24 @@
   file = {/Users/mavi/Zotero/storage/VCXVE9UF/Salomon and Cavagnaro - 2022 - Healthy soils The backbone of productive, safe an.pdf;/Users/mavi/Zotero/storage/35SXM28V/S0959652622004462.html}
 }
 
+@article{samieiDeepLearningbasedDetection2020,
+  title = {Deep Learning-Based Detection of Seedling Development},
+  author = {Samiei, Salma and Rasti, Pejman and Ly Vu, Joseph and Buitink, Julia and Rousseau, David},
+  date = {2020-07-30},
+  journaltitle = {Plant Methods},
+  shortjournal = {Plant Methods},
+  volume = {16},
+  number = {1},
+  pages = {103},
+  issn = {1746-4811},
+  doi = {10.1186/s13007-020-00647-9},
+  url = {https://doi.org/10.1186/s13007-020-00647-9},
+  urldate = {2023-07-21},
+  abstract = {Monitoring the timing of seedling emergence and early development via high-throughput phenotyping with computer vision is a challenging topic of high interest in plant science. While most studies focus on the measurements of leaf area index or detection of specific events such as emergence, little attention has been put on the identification of kinetics of events of early seedling development on a seed to seed basis.},
+  keywords = {Deep learning,Kinetic,Seedling development},
+  file = {/Users/mavi/Zotero/storage/WGC8MZEE/Samiei et al_2020_Deep learning-based detection of seedling development.pdf;/Users/mavi/Zotero/storage/J7LSPYD4/s13007-020-00647-9.html}
+}
+
 @article{schelhaasIntroducingTreeInteractions2007,
   title = {Introducing Tree Interactions in Wind Damage Simulation},
   author = {Schelhaas, M.J. and Kramer, K. and Peltola, H. and family=Werf, given=D.C., prefix=van der, useprefix=true and Wijdeven, S.M.J.},
