Adding SwinT figure

--- a/p_viticola/figures.tex
+++ b/p_viticola/figures.tex
@@ -75,9 +75,26 @@
 \begin{figure}[H]
     \begin{center}
         \includegraphics[width=0.7\linewidth]{2023_a_oiv_oiv_distribution}
-        \caption{Dateset OIV distribution: \textbf{Sabine: Equilibrer dataset}}\label{fig:datadistribution}
+        \caption{Visualization of the split of the annotated data set for training models}\label{fig:datadistribution}
     \end{center}
 \end{figure}
+
+
+\begin{equation}
+    -\sum_{c=1}^My_{o,c}\log(p_{o,c})\label{fml:crossentropy}
+\end{equation}
+
+\begin{equation}
+    f(x^{[i]}) = \hat{P}(y^{[i]} > r_{k}|y^{[i]} > r_{k-1})\label{fml:rankprob}
+\end{equation}
+
+\begin{equation}
+    \hat{P}(y^{[i]} > r_{k}) = \prod_{j=1}^{k}f_{j}(x^{[i]})\label{fml:chainprob}
+\end{equation}
+
+% \begin{equation}
+%     \hat{P}(y^{|i|} > r_{1}) \geq \hat{P}(y^{|i|} > r_{2}) \geq ... \geq \hat{P}(y^{|i|} > r_{K-1})\label{fml:}
+% \end{equation}
 
 
 \section{Results and Discussion}
@@ -85,49 +102,59 @@
 
 \begin{table}[H]
     \centering
-    \caption{Average performance metrics with different ordinal regression metrics}
+    \caption{Average performance metrics with different ordinal regression modes}
     \label{tab:dtafracevol}
-    \begin{tabular}{llrrrrrrrr}
+    \begin{tabular}{llrrrr}
         \toprule
-                           &            & \multicolumn{2}{l}{accuracy} & \multicolumn{2}{l}{f1 weighted avg} & \multicolumn{2}{l}{MSE} & \multicolumn{2}{l}{MAE}                                 \\
-                           &            & mean                         & std                                 & mean                    & std                     & mean  & std   & mean  & std   \\
-        Ordinal regression & backbone   &                              &                                     &                         &                         &       &       &       &       \\
+        Ordinal regression & backbone   & accuracy & f1 weighted avg & MSE & MAE                                 \\
         \midrule
-        Naive              & pretrained & 0.775                        & 0.016                               & 0.769                   & 0.021                   & 0.229 & 0.018 & 0.227 & 0.016 \\
-        coral              & pretrained & 0.447                        & 0.027                               & 0.368                   & 0.055                   & 0.737 & 0.052 & 0.612 & 0.024 \\
-        corn               & pretrained & 0.778                        & 0.014                               & 0.772                   & 0.017                   & 0.224 & 0.015 & 0.223 & 0.014 \\
-        spacecutter        & pretrained & 0.178                        & 0.003                               & 0.065                   & 0.011                   & 3.710 & 1.718 & 1.532 & 0.336 \\
+        Naive              & pretrained & 0.775±0.016                               & 0.769±0.021                   & 0.229±0.018 & 0.227±0.016 \\
+        CORAL              & pretrained & 0.447±0.027                               & 0.368±0.055                   & 0.737±0.052 & 0.612±0.024 \\
+        CORN               & pretrained & 0.778±0.014                               & 0.772±0.017                   & 0.224±0.015 & 0.223±0.014 \\
         \bottomrule
     \end{tabular}
 \end{table}
 
-\begin{figure}[H]
-    \begin{center}
-        \includegraphics[width=0.7\linewidth]{2023_a_oiv_cm}
-        \caption{Confusion matrix for best model using CORN ordinal regression method: \textbf{Sabine: Mettre accent sur 79 et humain}}\label{fig:oivcm}
-    \end{center}
-\end{figure}
 
 \begin{table}[H]
-    \centering
-    \caption{Classification report}
-    \label{tab:oivcr}
-    \begin{tabular}{lrrrr}
-        \toprule
-        {}           & precision & recall & f1-score & support \\
-        \midrule
-        1            & 0.95      & 0.85   & 0.90     & 48      \\
-        3            & 0.82      & 0.84   & 0.83     & 43      \\
-        5            & 0.81      & 0.91   & 0.86     & 47      \\
-        7            & 0.79      & 0.75   & 0.77     & 92      \\
-        9            & 0.67      & 0.71   & 0.69     & 51      \\
-                     &           &        &          &         \\
-        accuracy     &           &        & 0.80     & 281     \\
-        macro avg    & 0.81      & 0.81   & 0.81     & 281     \\
-        weighted avg & 0.80      & 0.80   & 0.80     & 281     \\
-        \bottomrule
-    \end{tabular}
+\centering
+\caption{Confusion matrix precision recall and F1-score where the best ordinal regression method is used, the CORN approach is used}
+\label{tab:dtafracevol}
+\begin{tabular}{lrrrrrrrr}
+\toprule
+\textbf{True OIV} & \textbf{Predicted} &&&&  & \textbf{F1-score}\\
+{} &   \textbf{1} &   \textbf{3} &   \textbf{5} &   \textbf{7} &   \textbf{9}&&\\
+\midrule
+\textbf{1} &  41 &   7 &   0 &   0 &   0    & 0.90           \\
+\textbf{3} &   2 &  36 &   5 &   0 &   0    & 0.83     \\
+\textbf{5} &   0 &   1 &  43 &   3 &   0    & 0.86      \\
+\textbf{7} &   0 &   0 &   5 &  69 &  18    & 0.77     \\
+\textbf{9} &   0 &   0 &   0 &  15 &  36    & 0.69     \\
+\bottomrule
+\end{tabular}
 \end{table}
+
+
+% \begin{table}[H]
+%     \centering
+%     \caption{Classification report}
+%     \label{tab:oivcr}
+%     \begin{tabular}{lrrrr}
+%         \toprule
+%         {}           \textbf{precision} & \textbf{recall} & \textbf{f1-score} & \textbf{support} \\
+%         \midrule
+%         1            & 0.95      & 0.85   & 0.90     & 48      \\
+%         3            & 0.82      & 0.84   & 0.83     & 43      \\
+%         5            & 0.81      & 0.91   & 0.86     & 47      \\
+%         7            & 0.79      & 0.75   & 0.77     & 92      \\
+%         9            & 0.67      & 0.71   & 0.69     & 51      \\
+%                      &           &        &          &         \\
+%         accuracy     &           &        & 0.80     & 281     \\
+%         macro avg    & 0.81      & 0.81   & 0.81     & 281     \\
+%         weighted avg & 0.80      & 0.80   & 0.80     & 281     \\
+%         \bottomrule
+%     \end{tabular}
+% \end{table}
 
 \section{Conclusions and perspectives}
 
