Added SwinT figure
Added SwinT figure
Updated bib

--- a/articles.bib
+++ b/articles.bib
@@ -4564,6 +4564,27 @@
   file = {/Users/mavi/Zotero/storage/7XIVPKNT/Zhou et al. - 2022 - Comparison of classic object-detection techniques .pdf;/Users/mavi/Zotero/storage/BK92RZT2/Comparison-of-classic-object-detection-techniques.html}
 }
 
+@article{zhuConvolutionalOrdinalRegression2022,
+  title = {Convolutional {{Ordinal Regression Forest}} for {{Image Ordinal Estimation}}},
+  author = {Zhu, Haiping and Shan, Hongming and Zhang, Yuheng and Che, Lingfu and Xu, Xiaoyang and Zhang, Junping and Shi, Jianbo and Wang, Fei-Yue},
+  date = {2022-08},
+  journaltitle = {IEEE Transactions on Neural Networks and Learning Systems},
+  shortjournal = {IEEE Trans. Neural Netw. Learning Syst.},
+  volume = {33},
+  number = {8},
+  eprint = {2008.03077},
+  eprinttype = {arxiv},
+  eprintclass = {cs},
+  pages = {4084--4095},
+  issn = {2162-237X, 2162-2388},
+  doi = {10.1109/TNNLS.2021.3055816},
+  url = {http://arxiv.org/abs/2008.03077},
+  urldate = {2023-09-25},
+  abstract = {Image ordinal estimation is to predict the ordinal label of a given image, which can be categorized as an ordinal regression problem. Recent methods formulate an ordinal regression problem as a series of binary classification problems. Such methods cannot ensure that the global ordinal relationship is preserved since the relationships among different binary classifiers are neglected. We propose a novel ordinal regression approach, termed Convolutional Ordinal Regression Forest or CORF, for image ordinal estimation, which can integrate ordinal regression and differentiable decision trees with a convolutional neural network for obtaining precise and stable global ordinal relationships. The advantages of the proposed CORF are twofold. First, instead of learning a series of binary classifiers \textbackslash emph\{independently\}, the proposed method aims at learning an ordinal distribution for ordinal regression by optimizing those binary classifiers \textbackslash emph\{simultaneously\}. Second, the differentiable decision trees in the proposed CORF can be trained together with the ordinal distribution in an end-to-end manner. The effectiveness of the proposed CORF is verified on two image ordinal estimation tasks, i.e. facial age estimation and image aesthetic assessment, showing significant improvements and better stability over the state-of-the-art ordinal regression methods.},
+  keywords = {Computer Science - Computer Vision and Pattern Recognition},
+  file = {/Users/mavi/Zotero/storage/JV6ZBSRM/Zhu et al_2022_Convolutional Ordinal Regression Forest for Image Ordinal Estimation.pdf;/Users/mavi/Zotero/storage/DRUQ8JBE/2008.html}
+}
+
 @online{zhuSemanticAmodalSegmentation2016,
   title = {Semantic {{Amodal Segmentation}}},
   author = {Zhu, Yan and Tian, Yuandong and Mexatas, Dimitris and Dollár, Piotr},
