--- a/p_viticola/figures.tex
+++ b/p_viticola/figures.tex
@@ -87,7 +87,7 @@
 \end{figure}
 
 \begin{equation}
-    -\sum_{c=1}^y_{o,c}\log(p_{o,c})\label{fml:crossentropy}
+    -\sum_{c=1}^My_{o,c}\log(p_{o,c})\label{fml:crossentropy}
 \end{equation}
 
 \begin{equation}
@@ -109,11 +109,6 @@
     \item Rank prediction~\ref{fml:rankprob}
 \end{itemize}
 
-% \begin{equation}
-%     \hat{P}(y^{|i|} > r_{1}) \geq \hat{P}(y^{|i|} > r_{2}) \geq ... \geq \hat{P}(y^{|i|} > r_{K-1})\label{fml:}
-% \end{equation}
-
-
 \section{Results and Discussion}
 
 
@@ -126,7 +121,7 @@
         Ordinal regression & backbone   & accuracy    & f1 weighted avg & MSE         & MAE         \\
         \midrule
         Naive              & pretrained & 0.775±0.016 & 0.769±0.021     & 0.229±0.018 & 0.227±0.016 \\
-        CORAL              & pretrained & 0.447±0.027 & 0.368±0.055     & 0.737±0.052 & 0.612±0.024 \\
+        % CORAL              & pretrained & 0.447±0.027 & 0.368±0.055     & 0.737±0.052 & 0.612±0.024 \\
         CORN               & pretrained & 0.778±0.014 & 0.772±0.017     & 0.224±0.015 & 0.223±0.014 \\
         \bottomrule
     \end{tabular}
@@ -142,55 +137,36 @@
         \textbf{True OIV} & \textbf{Predicted} &            &            &            &            & \textbf{F1-score}   \\
         {}                & \textbf{1}         & \textbf{3} & \textbf{5} & \textbf{7} & \textbf{9} &                   & \\
         \midrule
-        \textbf{1}        & 41                 & 7          & 0          & 0          & 0          & 0.90                \\
-        \textbf{3}        & 2                  & 36         & 5          & 0          & 0          & 0.83                \\
-        \textbf{5}        & 0                  & 1          & 43         & 3          & 0          & 0.86                \\
-        \textbf{7}        & 0                  & 0          & 5          & 69         & 18         & 0.77                \\
-        \textbf{9}        & 0                  & 0          & 0          & 15         & 36         & 0.69                \\
+        \textbf{1}        & 48                 & 2          & 0          & 0          & 0          & 0.91                \\
+        \textbf{3}        & 7                  & 32         & 4          & 0          & 0          & 0.81                \\
+        \textbf{5}        & 0                  & 2          & 38         & 7          & 0          & 0.84                \\
+        \textbf{7}        & 0                  & 0          & 2          & 78         & 12         & 0.77                \\
+        \textbf{9}        & 0                  & 0          & 0          & 26         & 25         & 0.57                \\
         \bottomrule
     \end{tabular}
 \end{table}
 
-
 % \begin{table}[H]
 %     \centering
-%     \caption{Classification report}
-%     \label{tab:oivcr}
-%     \begin{tabular}{lrrrr}
+%     \caption{Confusion matrix precision recall and F1-score where the best ordinal regression method is used, the CORN approach is used}
+%     \label{tab:dtafracevol}
+%     \begin{tabular}{lrrrrrrrr}
 %         \toprule
-%         {}           \textbf{precision} & \textbf{recall} & \textbf{f1-score} & \textbf{support} \\
+%         \textbf{True OIV} & \textbf{Predicted} &            &            &            &            & \textbf{F1-score}   \\
+%         {}                & \textbf{1}         & \textbf{3} & \textbf{5} & \textbf{7} & \textbf{9} &                   & \\
 %         \midrule
-%         1            & 0.95      & 0.85   & 0.90     & 48      \\
-%         3            & 0.82      & 0.84   & 0.83     & 43      \\
-%         5            & 0.81      & 0.91   & 0.86     & 47      \\
-%         7            & 0.79      & 0.75   & 0.77     & 92      \\
-%         9            & 0.67      & 0.71   & 0.69     & 51      \\
-%                      &           &        &          &         \\
-%         accuracy     &           &        & 0.80     & 281     \\
-%         macro avg    & 0.81      & 0.81   & 0.81     & 281     \\
-%         weighted avg & 0.80      & 0.80   & 0.80     & 281     \\
+%         \textbf{1}        & 41                 & 7          & 0          & 0          & 0          & 0.90                \\
+%         \textbf{3}        & 2                  & 36         & 5          & 0          & 0          & 0.83                \\
+%         \textbf{5}        & 0                  & 1          & 43         & 3          & 0          & 0.86                \\
+%         \textbf{7}        & 0                  & 0          & 5          & 69         & 18         & 0.77                \\
+%         \textbf{9}        & 0                  & 0          & 0          & 15         & 36         & 0.69                \\
 %         \bottomrule
 %     \end{tabular}
 % \end{table}
 
+
 \section{Conclusions and perspectives}
 
-% \begin{figure}[H]
-%     \centering
-%     \begin{subfigure}[b]{0.3\linewidth}
-%         \includegraphics[width=\linewidth]{blur.png}
-%         \caption{Blurred image}\label{fig:blurredimage}
-%     \end{subfigure}
-%     \begin{subfigure}[b]{0.3\linewidth}
-%         \includegraphics[width=\linewidth]{water.png}
-%         \caption{Water droplets}\label{fig:waterimage}
-%     \end{subfigure}
-%     \begin{subfigure}[b]{0.3\linewidth}
-%         \includegraphics[width=\linewidth]{color.png}
-%         \caption{Innate color issue}\label{fig:colorimage}
-%     \end{subfigure}
-%     \caption{Images with issues are hard to predict by the model}\label{fig:badimages}
-% \end{figure}
 
 \begin{figure}[H]
     \centering
